<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.example.lightupthenews.network.ArticleInfo" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/news_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/button_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_to_favorites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_title"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                app:layout_constraintEnd_toStartOf="@+id/button_favorites"
                app:layout_constraintTop_toTopOf="@+id/button_favorites"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="2dp"
                android:background="?attr/colorPrimaryDark"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop"
                app:imageUrl="@{article.urlToImage}"
                app:layout_constraintEnd_toStartOf="@id/button_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_title"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="16dp"
                android:text="@{article.title}"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/news_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{article.description}"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_image"
                tools:text="description" />

            <TextView
                android:id="@+id/text_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/published"
                app:layout_constraintEnd_toEndOf="@+id/button_favorites"
                app:layout_constraintStart_toEndOf="@+id/news_image"
                app:layout_constraintTop_toBottomOf="@+id/button_favorites" />

            <TextView
                android:id="@+id/date_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="5"
                android:text="@{article.publishedAt.toLocaleString()}"
                app:layout_constraintBottom_toBottomOf="@+id/news_image"
                app:layout_constraintEnd_toEndOf="@+id/button_favorites"
                app:layout_constraintStart_toStartOf="@+id/button_share"
                app:layout_constraintTop_toBottomOf="@+id/text_published" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
