<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.lightupthenews.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lightupthenews.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.LightUpTheNews.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_search_by_phrase"
            app:layout_constraintEnd_toStartOf="@+id/button_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                tools:text="Search" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:paddingStart="@dimen/title_padding"
            android:paddingEnd="@dimen/title_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{viewModel.recyclerViewArticles}"
                tools:listitem="@layout/one_news_card"
                />

        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <Button
            android:id="@+id/button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_nfilter"
            app:layout_constraintBottom_toBottomOf="@+id/button_search"
            app:layout_constraintEnd_toStartOf="@+id/button_search"
            app:layout_constraintTop_toTopOf="@+id/button_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>